Document the plugin.

--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,12 @@ license = Perl_5
 copyright_holder = David E. Wheeler
 copyright_year   = 2012
 
-version = 0.001
-
 [@Basic]
+[VersionFromModule]
+
+[MetaResources]
+repository.web  = https://github.com/theory/dist-zilla-localetextdomain
+repository.url  = https://github.com/theory/dist-zilla-localetextdomain.git
+repository.type = git
+
+[AutoPrereqs]
