--- a/dist.ini
+++ b/dist.ini
@@ -6,10 +6,16 @@ copyright_year   = 2012
 
 [@Basic]
 [VersionFromModule]
+[AutoPrereqs]
+[TestRelease]
 
 [MetaResources]
 repository.web  = https://github.com/theory/dist-zilla-localetextdomain
 repository.url  = https://github.com/theory/dist-zilla-localetextdomain.git
 repository.type = git
 
-[AutoPrereqs]
+[ModuleBuild]
+mb_version = 0.35
+
+
+
