Be more specific about the plugins we want.

--- a/dist.ini
+++ b/dist.ini
@@ -4,10 +4,20 @@ license = Perl_5
 copyright_holder = David E. Wheeler
 copyright_year   = 2012
 
-[@Basic]
+[GatherDir]
+[PruneCruft]
+[ManifestSkip]
+[MetaYAML]
+[MetaJSON]
+[License]
+[MakeMaker]
+[Manifest]
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
 [VersionFromModule]
 [AutoPrereqs]
-[TestRelease]
+[CheckExtraTests]
 
 [MetaResources]
 repository.web  = https://github.com/theory/dist-zilla-localetextdomain
@@ -16,6 +26,3 @@ repository.type = git
 
 [ModuleBuild]
 mb_version = 0.35
-
-
-
