Tell Dist::Zilla about some encodings.

--- a/dist.ini
+++ b/dist.ini
@@ -28,3 +28,7 @@ repository.type = git
 mb_version = 0.35
 mb_class = Dist::Zilla::LocaleTextDomainBuild
 
+[Encoding]
+filename = t/dist/po/de.po
+filename = t/dist/po/fr.po
+encoding = Latin-1
