--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
    - git config --global user.email "support@travis-ci.com"
 
 install:
-   - cpanm --quiet --notest --skip-satisfied RJBS/Dist-Zilla-5.000-TRIAL.tar.gz
+   - cpanm --quiet --notest --skip-satisfied RJBS/Dist-Zilla-5.000-TRIAL.tar.gz RJBS/Mixin-Linewise-0.100-TRIAL.tar.gz RJBS/Data-Section-0.200002-TRIAL.tar.gz
    - dzil authordeps | grep -v Dist::Zilla::Plugin::Encoding | grep -vP '[^\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest --skip-satisfied
    - export AUTOMATED_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
    - dzil listdeps | grep -vP '[^\w:]' | cpanm --quiet
