--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ perl:
   - "5.14"
   - "5.12"
   - "5.10"
-  - "5.8"
+  # - "5.8" # VersionFromModule not supported by 5.8.
 
 before_install:
    # Prevent "Please tell me who you are" errors for certain DZIL configs
@@ -15,7 +15,7 @@ before_install:
 
 install:
    - cpanm --quiet --notest --skip-satisfied RJBS/Mixin-Linewise-0.100-TRIAL.tar.gz RJBS/Data-Section-0.200002-TRIAL.tar.gz RJBS/Dist-Zilla-5.003-TRIAL.tar.gz 
-   - dzil authordeps | grep -v Dist::Zilla::Plugin::Encoding | grep -vP '[^\w:]' | xargs -n 5 -P 10 cpanm --verbose --notest --skip-satisfied
+   - dzil authordeps | grep -v Dist::Zilla::Plugin::Encoding | grep -vP '[^\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest --skip-satisfied
    - cpanm --quiet --skip-installed Test::Manifest Test::File Encode
    - export AUTOMATED_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
    - dzil listdeps | grep -vP '[^\w:]' | cpanm --quiet
