--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
    - git config --global user.email "support@travis-ci.com"
 
 install:
-   - cpanm --quiet --notest --skip-satisfied RJBS/Mixin-Linewise-0.100-TRIAL.tar.gz RJBS/Data-Section-0.200002-TRIAL.tar.gz RJBS/Dist-Zilla-5.003-TRIAL.tar.gz 
+   - cpanm --quiet --notest --skip-satisfied Dist::Zilla
    - dzil authordeps | grep -v Dist::Zilla::Plugin::Encoding | grep -vP '[^\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest --skip-satisfied
    - cpanm --quiet --skip-installed Test::Manifest Test::File Encode
    - export AUTOMATED_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
