--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ install:
    - dzil authordeps | grep -vP '[^\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest --skip-satisfied
    - cpanm --quiet --skip-installed Test::Manifest Test::File Encode
    - export AUTOMATED_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
-   - cpanm --verbose Locale::Country
-   - dzil listdeps | grep -vP '[^\w:]' | cpanm --quiet
+   - cpanm --quiet --skip-satisfied Locale::Country
+   - dzil listdeps | grep -vP '[^\w:]' | grep -v Locale::Country | cpanm --quiet
 
 script:
    - export HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
