--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: perl
 perl:
+  - "5.26"
+  - "5.24"
   - "5.22"
   - "5.20"
   - "5.18"
   - "5.16"
   - "5.14"
-  - "5.12"
-  - "5.10"
-  # - "5.8" # VersionFromModule not supported by 5.8.
+  # - "5.12"  # Dist::Zilla 6+ requires at least 5.14.
+  # - "5.10"
+  # - "5.8"   # VersionFromModule not supported by 5.8.
 
 before_install:
    # Prevent "Please tell me who you are" errors for certain DZIL configs
